      for each other or one exceptions is an ancestor of another.

    * Avoid crashing on ill-formatted strings when checking for string formatting errors.

    * Added a new Python 3 warning for calling 'str.encode' or 'str.decode' with a non-text
      encoding.

    * Added a new Python 3 check for accessing 'sys.maxint' which was removed in Python 3 in favor
      of 'sys.maxsize'

What's new in Pylint 1.6.3?
===========================

Release date: 2016-07-18

    * Do not crash when inferring uninferable exception types for docparams extension

      Close #998

What's new in Pylint 1.6.2?
===========================

Release date: 2016-07-15

    * Do not crash when printing the help of options with default regular expressions

      Close #990

    * More granular versions for deprecated modules.

      Close #991

    * Do not crash in docparams when we can't infer the exception types.


What's new in Pylint 1.6.1?
===========================

Release date: 2016-07-07

    * Use environment markers for supporting conditional dependencies.


What's New in Pylint 1.6.0?
===========================

Release date: 2016-07-07

    * Added a new extension, `pylint.extensions.mccabe`, for warning
      about complexity in code.

    * Deprecate support for --optimize-ast. Part of #975.

    * Deprecate support for the HTML output. Part of #975.

    * Deprecate support for --output-files. Part of #975.

    * Fixed a documentation error for the check_docs extension. Fixes #735.

    * Made the list of property-defining decorators configurable.

    * Fix a bug where the top name of a qualified import was detected as unused variable.

      Close #923.

    * bad-builtin is now an extension check.

    * generated-members support qualified name through regular expressions.

      For instance, one can specify a regular expression as --generated-members=astroid.node_classes.*