@@ -101,8 +101,9 @@ Order doesn't matter (not that much, at least ;)
 * Alexander Todorov: added new errro conditions to 'bad-super-call'.
 
 * Roy Williams (Lyft): added check for implementing __eq__ without implementing __hash__,
-  Added Python 3 check for accessing Exception.message,
+  Added Python 3 check for accessing Exception.message.
   Added Python 3 check for calling encode/decode with invalid codecs.
-  Added Python 3 check for accessing sys.maxint
+  Added Python 3 check for accessing sys.maxint.
+  Added Python 3 check for bad import statements.
 
 * Erik Eriksson - Added overlapping-except error check.
